# poetry-private-repo-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
poetry_private_repo_plugin/: plugin.py
